[package]
name = "zkscan-etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.6.2", features = ["serde"] }
anyhow = "1.0.79"
async-once-cell = "0.5.3"
deadpool-postgres = "0.12.1"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
once_cell = "1.19.0"
rdkafka = { version = "0.36.2", features = ["gssapi", "cmake-build", "tracing"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
redis_pool = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
structstruck = "0.4.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
